# ibmfloat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: conversion.rs
fuzz/: Cargo.toml  build.rs  ibm2ieee.c
fuzz/fuzz_targets/: ibm32ieee32.rs  ibm32ieee64.rs  ibm64ieee32.rs  ibm64ieee64.rs
ibm2ieee-sys/: Cargo.toml  README.md  build.rs
ibm2ieee-sys/benches/: c_conversion.rs  conversion.rs
ibm2ieee-sys/src/: ibm2ieee.LICENSE  lib.rs
ibm2ieee-sys/tests/: comparison.rs
src/: lib.rs  std_tests.rs
src/convert/: mod.rs
src/convert/tests/: ibm32ieee32.rs  ibm32ieee64.rs  ibm64ieee32.rs  ibm64ieee64.rs  mod.rs  random_double_to_double.txt  random_double_to_single.txt  random_single_to_double.txt  random_single_to_single.txt
src/sas/: mod.rs
src/sas/tests/: f64.rs  missing_value.rs  mod.rs
