[package]
name = "ibmfloat"
description = "IBM floating point number types"
readme = "README.md"
version = "0.1.2-alpha.0"
authors = ["Will Glynn <will@willglynn.com>", "Enthought Inc."]
edition = "2018"
exclude = [".github", "fuzz/**/*", "ibm2ieee-sys/**/*"]
license = "BSD-3-Clause"
repository = "https://github.com/willglynn/ibmfloat"

[dependencies]

[features]
default = ["std"]
std = []
