[package]
name = "ibm2ieee-sys"
version = "0.1.0"
authors = ["Will Glynn <will@willglynn.com>"]
edition = "2018"
publish = false

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
ibmfloat = { path = ".."}

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "c_conversion"
harness = false

